--- a/style.css
+++ b/style.css
@@ -641,20 +641,20 @@ a {
           background: rgba(241, 78, 78, 0.8);
           border: none;
           color: #fff; }
-  .overlap-light .site-header:not(.stuck) .main-navigation div > ul > li > a {
+  .overlap-light .site-header:not(.stuck) .main-navigation div > ul:not(.cart_list) > li > a {
     color: #fff; }
-  .overlap-dark .site-header:not(.stuck) .main-navigation div > ul > li > a {
+  .overlap-dark .site-header:not(.stuck) .main-navigation div > ul:not(.cart_list) > li > a {
     color: #2d2d2d; }
-  .main-navigation div > ul > li:hover > a {
+  .main-navigation div > ul:not(.cart_list) > li:hover > a {
     border-bottom: 2px solid;
     border-color: #f14e4e; }
-  .main-navigation div > ul > li:not(.current-menu-item).menu-item-has-children > a {
+  .main-navigation div > ul:not(.cart_list) > li:not(.current-menu-item).menu-item-has-children > a {
     border-bottom: none; }
-  .main-navigation div > ul > li.current > a,
-  .main-navigation div > ul > li.current_page_item > a,
-  .main-navigation div > ul > li.current-menu-item > a,
-  .main-navigation div > ul > li.current_page_ancestor > a,
-  .main-navigation div > ul > li.current-menu-ancestor > a {
+  .main-navigation div > ul:not(.cart_list) > li.current > a,
+  .main-navigation div > ul:not(.cart_list) > li.current_page_item > a,
+  .main-navigation div > ul:not(.cart_list) > li.current-menu-item > a,
+  .main-navigation div > ul:not(.cart_list) > li.current_page_ancestor > a,
+  .main-navigation div > ul:not(.cart_list) > li.current-menu-ancestor > a {
     border-color: #f14e4e; }
   .main-navigation .search-toggle {
     background: transparent;
